SERVER-22007 Disable last-error tracking for help commands.