src/mongo/db/commands/get_last_error.cpp
@@ -93,7 +93,6 @@ public:
                                        const BSONObj& cmdObj,
                                        std::vector<Privilege>* out) {}  // No auth required
     virtual void help(stringstream& help) const {
-        LastError::get(cc()).disable();  // SERVER-11492
         help << "return error status of the last operation on this connection\n"
              << "options:\n"
              << "  { fsync:true } - fsync before returning, or wait for journal commit if running "
