src/mongo/db/dbcommands.cpp
@@ -1221,6 +1221,10 @@ void Command::execCommand(OperationContext* txn,
 
         if (isHelpRequest(extractedFields[kHelpField])) {
             CurOp::get(txn)->ensureStarted();
+            // We disable last-error for help requests due to SERVER-11492, because config servers
+            // use help requests to determine which commands are database writes, and so must be
+            // forwarded to all mirrored (SCCC) config servers.
+            LastError::get(txn->getClient()).disable();
             generateHelpResponse(txn, request, replyBuilder, *command);
             return;
         }
